[1.172] sync, g2k23 - hackathons.html

--- a/hackathons.html
+++ b/hackathons.html
@@ -89,6 +89,16 @@ td {
 
 <table>
 <td>
+    <a id="g2k23" href="images/hackathons/noshirt-s.gif">
+    <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
+    g2k23: general hackathon<br>
+    Июль 2 - 9, 2023<br>
+    Таллин, Эстония<br>
+    20 разработчиков<br>
+    Организован благодаря финансированию со стороны
+    <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    <br>
+<td>
     <a id="w2k23" href="images/hackathons/w2k23.gif">
     <img src="images/hackathons/w2k23-s.gif" alt="w2k23"></a><br>
     w2k23: wifi nano hackathon<br>
@@ -108,6 +118,7 @@ td {
     22 разработчика<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <br><br><br>
     <a id="h2k22" href="images/hackathons/h2k22.gif">
@@ -120,7 +131,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Pedro Almeida.
-<tr>
 <td>
     <a id="g2k22" href="images/hackathons/g2k22.gif">
     <img src="images/hackathons/g2k22-s.gif" alt="g2k22"></a><br>
@@ -142,7 +152,7 @@ td {
     <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     и поддержке Stefan Sperling.
     <br>
-
+<tr>
 <td>
     <a id="h2k21" href="images/hackathons/h2k21.gif">
     <img src="images/hackathons/h2k21-s.gif" alt="h2k21"></a><br>
@@ -155,7 +165,6 @@ td {
     поддержке Pedro Almeida и
     <a href="https://www.cm-gouveia.pt/">муниципалитета Говеи</a>.
     <br>
-<tr>
 <td>
     <a id="k2k21" href="images/hackathons/k2k21.gif">
     <img src="images/hackathons/k2k21-s.gif" alt="k2k21"></a><br>
@@ -174,6 +183,7 @@ td {
     14 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="http://www.genua.de">genua</a>.
+<tr>
 <td>
     <a id="a2k20" href="images/hackathons/a2k20.png">
     <img src="images/hackathons/a2k20-s.png" alt="a2k20"></a><br>
@@ -184,7 +194,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Росса Л. Ричардсона.
-<tr>
 <td>
     <a id="u2k20" href="images/hackathons/u2k20.gif">
     <img src="images/hackathons/u2k20-s.gif" alt="u2k20-s"></a><br>
@@ -206,6 +215,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.xplornet.ca">Xplornet</a>.
+<tr>
 <td>
     <a id="p2k19" href="images/hackathons/p2k19.gif">
     <img src="images/hackathons/p2k19-s.gif" alt="p2k19-s"></a><br>
@@ -218,7 +228,6 @@ td {
     и поддержке
     <a href="http://fmi.unibuc.ro">факультета математики и компьютерных наук бухарестского университета</a>.
     <br>
-<tr>
 <td>
     <a id="g2k19" href="images/hackathons/g2k19.gif">
     <img src="images/hackathons/g2k19-s.gif" alt="g2k19-s"></a><br>
@@ -240,6 +249,7 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Kevin Lo и <a href="http://www.funtoro.com">MSI/FUNTORO</a>
     <br>
+<tr>
 <td>
     <a id="a2k19" href="images/hackathons/a2k19.gif">
     <img src="images/hackathons/a2k19-s.gif" alt="a2k19-s"></a><br>
@@ -251,7 +261,6 @@ td {
     <a href="https://www.victoria.ac.nz">Victoria University of Wellington</a>
     и <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
-<tr>
 <td>
     <a id="l2k18" href="images/hackathons/l2k18.jpg">
     <img src="images/hackathons/l2k18-s.gif" alt="l2k18-s"></a><br>
@@ -272,6 +281,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и Oracle, а также при поддержке Univerzita Jana Evangelisty Purkyn&#283;.
+<tr>
 <td>
     <a id="g2k18" href="images/hackathons/g2k18.gif">
     <img src="images/hackathons/g2k18-s.gif" alt="g2k18-s"></a><br>
@@ -282,7 +292,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и Mitja Mu&#382;eni&#269;.
-<tr>
 <td>
     <a id="p2k18" href="images/hackathons/p2k18.gif">
     <img src="images/hackathons/p2k18-s.gif" alt="p2k18-s"></a><br>
@@ -303,6 +312,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.otago.ac.nz">University of Otago</a>.
+<tr>
 <td>
     <a id="s2k17" href="images/hackathons/s2k17.gif">
     <img src="images/hackathons/s2k17-s.gif" alt="s2k17-s"></a><br>
@@ -313,7 +323,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="http://www.foretell.ca">ForeTell Technologies</a>
     и <a href="http://www.xplornet.ca">Xplornet</a>.
-<tr>
 <td>
     <a id="p2k17" href="images/hackathons/p2k17.gif">
     <img src="images/hackathons/p2k17-s.gif" alt="p2k17-s"></a><br>
@@ -335,6 +344,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.utoronto.ca">University of Toronto</a>.
+<tr>
 <td>
     <a id="d2k17" href="images/hackathons/d2k17.gif">
     <img src="images/hackathons/d2k17-s.gif" alt="d2k17-s"></a><br>
@@ -345,7 +355,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.genua.de">genua</a>.
-<tr>
 <td>
     <a id="noshirt" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -364,6 +373,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и David Gwynne.	
+<tr>
 <td>
     <br>
     <br>
@@ -386,7 +396,6 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и оказанной помощи от <a href="http://www.enseeiht.fr">ENSEEIHT</a> и
     <a href="http://www.objectif-libre.com">Objectif Libre</a>.
-<tr>
 <td>
     <a id="b2k16" href="images/hackathons/b2k16.gif">
     <img src="images/hackathons/b2k16-s.gif" alt="b2k16-s"></a><br>
@@ -406,6 +415,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и помощи <a href="http://www.cl.cam.ac.uk">компьютерной лаборатории в Кэмбридже</a>.
+<tr>
 <td>
     <a id="n2k16" href="images/hackathons/n2k16.gif">
     <img src="images/hackathons/n2k16-s.gif" alt="n2k16-s"></a><br>
@@ -417,7 +427,6 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.oracle.com">Oracle</a>, а также помощи
     <a href="http://cuni.cz">Charles University</a>.
-<tr>
 <td>
     <a id="p2k16" href="images/hackathons/p2k16.gif">
     <img src="images/hackathons/p2k16-s.gif" alt="p2k16-s"></a><br>
@@ -438,6 +447,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://esdenera.com">Esdenera Networks</a>.
+<tr>
 <td>
     <a id="u2k15" href="images/hackathons/u2k15.gif">
     <img src="images/hackathons/u2k15-s.gif" alt="u2k15-s"></a><br>
@@ -448,7 +458,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.in-berlin.de">IN-Berlin</a>.
-<tr>
 <td>
     <a id="l2k15" href="images/hackathons/l2k15.gif">
     <img src="images/hackathons/l2k15-s.gif" alt="l2k15-s"></a><br>
@@ -468,6 +477,7 @@ td {
     6 разработчиков<br>
     Организова при поддержке
     <a href="http://www.iij-ii.co.jp/en/">IIJ innovation institute</a>.
+<tr>
 <td>
     <a id="c2k15" href="images/hackathons/c2k15.gif">
     <img src="images/hackathons/c2k15-s.gif" alt="c2k15-s"></a><br>
@@ -478,7 +488,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://sait.ca">SAIT</a>.
-<tr>
 <td>
     <a id="p2k15" href="images/hackathons/p2k15.gif">
     <img src="images/hackathons/p2k15-s.gif" alt="p2k15-s"></a><br>
@@ -499,6 +508,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Девида Гвинне (David Gwynne).
+<tr>
 <td>
     <a id="g2k14" href="images/hackathons/g2k14.gif">
     <img src="images/hackathons/g2k14-s.gif" alt="g2k14-s"></a><br>
@@ -509,7 +519,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Мити (Mitja Mu&#382;eni&#269;).
-<tr>
 <td>
     <a id="m2k14" href="images/hackathons/m2k14.gif">
     <img src="images/hackathons/m2k14-s.gif" alt="m2k14-s"></a><br>
@@ -530,6 +539,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="http://www.foretell.ca">ForeTell Technologies</a>
     и поддержке <a href="http://www.otago.ac.nz">University of Otago</a>.
+<tr>
 <td>
     <a id="b2k13" href="images/hackathons/b2k13.gif">
     <img src="images/hackathons/b2k13-s.gif" alt="b2k13-s"></a><br>
@@ -540,7 +550,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.in-berlin.de">IN-Berlin</a>.
-<tr>
 <td>
     <a id="t2k13" href="images/hackathons/t2k13.jpg">
     <img src="images/hackathons/t2k13-s.gif" alt="t2k13-s"></a><br>
@@ -561,6 +570,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.otago.ac.nz">University of Otago</a>.
+<tr>
 <td>
     <a id="c2k12" href="images/hackathons/c2k12.gif">
     <img src="images/hackathons/c2k12-s.gif" alt="c2k12-s"></a><br>
@@ -571,7 +581,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
-<tr>
 <td>
     <a id="p2k12" href="images/hackathons/p2k12.gif">
     <img src="images/hackathons/p2k12-s.gif" alt="p2k12-s"></a><br>
@@ -590,6 +599,7 @@ td {
     23 разработчика<br>
     Организован благодаря финансированию со стороны
     <a href="http://www.genua.de">genua</a>.
+<tr>
 <td>
     <a id="g2k12" href="images/hackathons/g2k12.gif">
     <img src="images/hackathons/g2k12-s.gif" alt="g2k12-s"></a><br>
@@ -599,7 +609,6 @@ td {
     41 разработчик<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="r2k12" href="images/hackathons/r2k12.gif">
     <img src="images/hackathons/r2k12-s.gif" alt="r2k12-s"></a><br>
@@ -620,6 +629,7 @@ td {
     15 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="a2k11" href="images/hackathons/a2k11.gif">
     <img src="images/hackathons/a2k11-s.gif" alt="a2k11-s"></a><br>
@@ -630,7 +640,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
-<tr>
 <td>
     <a id="s2k11" href="images/hackathons/s2k11.jpg">
     <img src="images/hackathons/s2k11-s.gif" alt="s2k11-s"></a><br>
@@ -650,6 +659,7 @@ td {
     36 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="k2k11" href="images/hackathons/k2k11.jpg">
     <img src="images/hackathons/k2k11-s.gif" alt="k2k11-s"></a><br>
@@ -659,7 +669,6 @@ td {
     15 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="p2k10" href="images/hackathons/p2k10.gif">
     <img src="images/hackathons/p2k10-s.gif" alt="p2k10-s"></a><br>
@@ -676,6 +685,7 @@ td {
     Сентябрь 19 - 25, 2010<br>
     Akiyamago, Sakae Mura, Nagano, Japan<br>
     19 разработчиков<br>
+<tr>
 <td>
     <a id="c2k10" href="images/hackathons/c2k10.gif">
     <img src="images/hackathons/c2k10-s.gif" alt="c2k10-s"></a><br>
@@ -685,7 +695,6 @@ td {
     46 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <br>
     <br>
@@ -713,6 +722,7 @@ td {
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>
     и при поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
+<tr>
 <td>
     <a id="p2k9" href="images/hackathons/p2k9.gif">
     <img src="images/hackathons/p2k9-s.gif" alt="p2k9-s"></a><br>
@@ -722,7 +732,6 @@ td {
     14 разоаботчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="f2k9" href="images/hackathons/f2k9.gif">
     <img src="images/hackathons/f2k9-s.gif" alt="f2k9-s"></a><br>
@@ -741,6 +750,7 @@ td {
     46 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="n2k9" href="images/hackathons/n2k9.gif">
     <img src="images/hackathons/n2k9-s.gif" alt="n2k9-s"></a><br>
@@ -748,7 +758,6 @@ td {
     Январь 26 - 30, 2009<br>
     Базель, Швейцария<br>
     19 разработчиков<br>
-<tr>
 <td>
     <a id="h2k8" href="images/hackathons/h2k8.gif">
     <img src="images/hackathons/h2k8-s.gif" alt="h2k8-s"></a><br>
@@ -768,6 +777,7 @@ td {
     13 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="c2k8" href="images/hackathons/c2k8.gif">
     <img src="images/hackathons/c2k8-s.gif" alt="c2k8-s"></a><br>
@@ -777,7 +787,6 @@ td {
     55 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="n2k8" href="images/hackathons/n2k8.gif">
     <img src="images/hackathons/n2k8-s.gif" alt="n2k8-s"></a><br>
@@ -798,6 +807,7 @@ td {
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>,
     а также при поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
+<tr>
 <td>
     <a id="p2k7" href="images/hackathons/p2k7.gif">
     <img src="images/hackathons/p2k7-s.gif" alt="p2k7-s"></a><br>
@@ -807,7 +817,6 @@ td {
     13 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="c2k7" href="images/hackathons/c2k7.gif">
     <img src="images/hackathons/c2k7-s.gif" alt="c2k7-s"></a><br>
@@ -826,6 +835,7 @@ td {
     14 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="h2k6" href="images/hackathons/h2k6.gif">
     <img src="images/hackathons/h2k6-s.gif" alt="h2k6-s"></a><br>
@@ -836,7 +846,6 @@ td {
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>,
     а также поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
-<tr>
 <td>
     <a id="p2k6" href="images/hackathons/p2k6.gif">
     <img src="images/hackathons/p2k6-s.gif" alt="p2k6-s"></a><br>
@@ -853,6 +862,7 @@ td {
     Август 28 - Sep 1, 2006<br>
     Замок Kransberg, Германия<br>
     14 разработчиков<br>
+<tr>
 <td>
     <a id="r2k6" href="images/hackathons/r2k6.gif">
     <img src="images/hackathons/r2k6-s.gif" alt="r2k6-s"></a><br>
@@ -861,7 +871,6 @@ td {
     Гамбург, Германия<br>
     6 разработчиков<br>
     При поддержке Henning Brauer.
-<tr>
 <td>
     <a id="c2k6" href="images/hackathons/c2k6.gif">
     <img src="images/hackathons/c2k6-s.gif" alt="c2k6-s"></a><br>
@@ -880,6 +889,7 @@ td {
     12 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="c2k5" href="images/hackathons/c2k5.gif">
     <img src="images/hackathons/c2k5-s.gif" alt="c2k5-s"></a><br>
@@ -889,7 +899,6 @@ td {
     60 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="c2k4" href="images/hackathons/c2k4.gif">
     <img src="images/hackathons/c2k4-s.gif" alt="c2k4-s"></a><br>
@@ -907,6 +916,7 @@ td {
     Сишелт, Британская Колумбия, Канада<br>
     12 разработчиков<br>
     При поддержке Ryan McBride.
+<tr>
 <td>
     <a id="c2k3" href="images/hackathons/c2k3.gif">
     <img src="images/hackathons/c2k3-s.gif" alt="c2k3-s"></a><br>
@@ -917,7 +927,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.nlnetlabs.nl">NLnet</a>
     (после того, как DARPA прекратила оказывать поддержку).
-<tr>
 <td>
     <a id="c2k2" href="images/hackathons/c2k2.gif">
     <img src="images/hackathons/c2k2-s.gif" alt="c2k2-s"></a><br>
@@ -934,6 +943,7 @@ td {
     Вашингтон, округ Колумбия<br>
     Организован благодаря финансированию со стороны DARPA
     и поддержке <a href="http://www.usenix.org">USENIX</a>.
+<tr>
 <td>
     <a id="c2k1" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -943,7 +953,6 @@ td {
     25 разработчиков<br>
     Организован благодаря финансированию со стороны DARPA
     и поддержке <a href="http://www.mit.edu">MIT</a>.
-<tr>
 <td>
     <a id="c2k" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
