[1.91] update link to tagging.html - faq/pf/index.html

--- a/faq/pf/index.html
+++ b/faq/pf/index.html
@@ -33,7 +33,7 @@ PF: Пакетный фильтр OpenBSD
 	<li><a href="options.html"                             >Параметры работы фильтра</a>
 	<li><a href="anchors.html"                             >Anchors (привязанные правила)</a>
 	<li><a href="pools.html"                               >Пулы адресов и балансировка нагрузки</a>
-	<li><a href="https://openbsd.org/faq/pf/tagging.html"  >Маркировка пакетов (политика фильтрации)</a>
+	<li><a href="tagging.html"                             >Маркировка пакетов (политика фильтрации)</a>
 	</ul>
 <li>Дополнительные темы
 	<ul>
