--- a/openrsync/index.html
+++ b/openrsync/index.html
@@ -20,7 +20,7 @@
 
 <header>Для OpenBSD</header>
 <ul>
-	<li><a href="https://www.openbsd.org/anoncvs.html">AnonCVS</a>
+	<li><a href="../anoncvs.html">AnonCVS</a>
 	<li><a href="https://cvsweb.openbsd.org/src/usr.bin/rsync/">CVSWeb</a>
 </ul>
 
