--- a/openssh/security.html
+++ b/openssh/security.html
@@ -52,7 +52,7 @@ OpenSSH разрабатывается по тем же принципам и т
         assigned CVE-2023-38408.
     <br>
 	This bug is corrected in OpenSSH 9.3p2. For OpenBSD, an
-        <a href="https://www.openbsd.org/errata.html">errata</a>
+        <a href="../errata.html">errata</a>
         patch exists to fix this problem.
     <br>
     For more information, please refer to the
