[1.555] update link to pf/tagging - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -210,7 +210,7 @@ XXX  -->
   <li><a href="pf/options.html"                              >Параметры работы фильтра</a>
   <li><a href="pf/anchors.html"                              >Anchors (привязанные правила)</a>
   <li><a href="pf/pools.html"                                >Пулы адресов и балансировка нагрузки</a>
-  <li><a href="https://www.openbsd.org/faq/pf/tagging.html"  >Маркировка пакетов (Политика фильтрации)</a>
+  <li><a href="pf/tagging.html"                              >Маркировка пакетов (Политика фильтрации)</a>
   </ul>
 <li>Дополнительные вопросы
   <ul>
