--- a/rpki-client/index.html
+++ b/rpki-client/index.html
@@ -38,8 +38,8 @@
 </h2>
 
 <p id="callout">
-<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-8.8.txt">
-rpki-client 8.8</a> вышел 29 декабря 2023 года.
+<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-8.9.txt">
+rpki-client 8.9</a> вышел 13 февраля 2024 года.
 
 <p>
 <a href="https://man.openbsd.org/rpki-client">rpki-client</a>
