--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 8.8 вышла 29 декабря 2023 года.
+Портированная версия rpki-client 8.9 вышла 13 февраля 2024 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
@@ -57,7 +57,9 @@ rpki-client может работать и на других ОС. Отчеты 
 
 Архивы с исходниками релизов подписаны (сигнированы) при помощи
 <a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/RELEASE_KEY.asc">этого PGP public ключа</a>.
-(B5B6416FEA6DDA05EA562A9FCB987F2783972FF9)
+(B5B6416FEA6DDA05EA562A9FCB987F2783972FF9),
+или при помощи <a href="https://man.openbsd.org/signify.1">signify</a> ключа
+<code>RWQyprfgXLzkG4YOlzFYl/4nbuLUtmjAFItNrkc4dNVPV6ma5Vbmb1O8</code>.
 
 <hr>
 
