--- a/faq/ports/guide.html
+++ b/faq/ports/guide.html
@@ -160,7 +160,7 @@ If you have <code>foo-1.0.tar.gz</code>, <code>DISTNAME</code> is
 <code>foo-1.0</code>.
 
 <li>
-Fill in <code>MASTER_SITES</code> with a list of URLs to the locations where
+Fill in <code>SITES</code> with a list of URLs to the locations where
 the distfile is kept, https://ftp.openbsd.org/pub/OpenBSD/distfiles/ for
 example.
 <b>Don't forget the trailing slash.</b>
@@ -169,7 +169,7 @@ Place the most easily accessible first as they are traversed in order.
 
 <li>
 Keep in mind that fetch references the file as
-<code>${MASTER_SITES}${DISTNAME}${EXTRACT_SUFX}</code>.
+<code>${SITES}${DISTNAME}${EXTRACT_SUFX}</code>.
 All three are used.
 Don't set <code>DISTNAME</code> to point to the file directly.
 
@@ -192,10 +192,10 @@ If your ports are available over large public mirrors such as GNU,
 Sourceforge, or CPAN, we have already provided a list of sites for
 your use in
 <code>/usr/ports/infrastructure/db/network.conf</code>.
-Set <code>MASTER_SITES</code> to <code>${MASTER_SITE_GNU}</code>, or
-<code>${MASTER_SITE_SOURCEFORGE}</code>, etc.
+Set <code>SITES</code> to <code>${SITE_GNU}</code>, or
+<code>${SITE_SOURCEFORGE}</code>, etc.
 To simplify this process, use the construct
-<code>${MASTER_SITE_FOO:=subdir/}</code>
+<code>${SITE_FOO:=subdir/}</code>
 to append the distribution subdirectory.
 
 <li>
@@ -208,7 +208,7 @@ Where available, use these in preference to other options as they usually
 include the proper build infrastructure (configure scripts, etc) which are
 often missing from "tagged" releases.
 Specify as normal, using something like
-<code>MASTER_SITES=https://github.com/acct/project/releases/download/relname/</code>
+<code>SITES=https://github.com/acct/project/releases/download/relname/</code>
 
 <li>In other cases, files have been tagged but they rely on github's
 on-the-fly archive creation.
@@ -259,12 +259,11 @@ Even if all distfiles change, it is easier for the user to track cruft.
 
 <li>
 All <code>DISTFILES</code> and <code>PATCHFILES</code> don't necessarily come
-from the same set of <code>MASTER_SITES</code>.
-Supplementary sites can be defined using the variables
-<code>MASTER_SITES0</code> to
-<code>MASTER_SITES9</code>.
-Just write <code>DISTFILES=foo-1.0.5.tar.gz:5</code> to
-retrieve <code>foo-1.0.5.tar.gz</code> from <code>MASTER_SITES5</code>.
+from the same set of <code>SITES</code>.
+Supplementary sites can be defined using suffixes:
+<code>DISTFILES.alt = foo-1.0.5.tar.gz</code>
+will come from
+<code>SITES.alt</code>.
 
 <li>
 Some ports don't always need to retrieve all files in all circumstances.
@@ -273,24 +272,15 @@ files which are only required in such a case.
 Or they may need some files for some architectures only.
 In such a case, those supplementary optional files must be mentioned in the
 <code>SUPDISTFILES</code> variable.
-Targets such as <code>makesum</code> or <code>mirror-distfiles</code> will
+Targets such as <code>makesum</code> or <code>fetch-all</code> will
 fetch those supplementary files that the casual user doesn't need.
 </ul>
 
 <br><li>
 Create a checksum in <code>distinfo</code> by typing <code>make makesum</code>.
-Then verify the checksum is correct by typing <code>make checksum</code>.
-
-<ul><li>
-In some rare cases, files checksums can't be verified reliably.
-By all means, porters should try to find sites that are reliable.
-Communicating with the software author and the archive site maintainer at this
-stage is highly desirable.
-In the worst case, non-checksummable files can be mentioned in the
-<code>IGNOREFILES</code> variable.
 
 <li>
-All files in <code>DISTFILES</code> are usually processed during
+All files in <code>DISTFILES*</code> are usually processed during
 <code>make extract</code>.
 <code>EXTRACT_ONLY</code> may be used to limit extraction to a subset of files
 (possibly empty).
@@ -406,7 +396,8 @@ This will delete the work directory, re-extract, and patch your port.
 </ul>
 
 <br><li>
-Begin a cycle of <code>make build</code>, generate a patch using
+Begin a cycle of <code>make build</code>, edit source code,
+generate a patch using
 <code>make update-patches</code> and <code>make clean patch</code>.
 
 <ul><li>
@@ -433,12 +424,14 @@ Use <code>make update-patches</code> to generate patches.
 All patches MUST be relative to <code>${WRKDIST}</code>.
 
 <li>
-Check that patches <b>DON'T</b> contain tags that cvs will replace.
+Check that patches <b>DON'T</b> contain tags that cvs will replace
+(<a href="https://man.openbsd.org/update-patches">update-patches(1)</a>
+will warn you about it).
 If they do, your patches won't apply after you check them in.
 You can check in your changes with <code>-kk</code> to avoid this.
 
 <li>
-Write a small explanation at the beginning of the patch file about its purpose
+Write a short explanation at the beginning of the patch file about its purpose
 (not mandatory, but for example often done for security patches).
 
 <li>
@@ -451,8 +444,7 @@ Try setting <code>SEPARATE_BUILD</code>.
 
 <ul><li>
 If the port can build with object files outside its source tree,
-this is cleaner (many programs using <code>CONFIGURE_STYLE=gnu</code> can),
-and may help people who mount their ports tree on several arches.
+this is cleaner (many programs using <code>CONFIGURE_STYLE=gnu</code> can).
 
 <li>
 This can also spare you some effort, as you will possibly be able to
@@ -464,18 +456,10 @@ Peruse the output (if any) and tweak any options in the <code>Makefile</code>.
 To repeat issue the command <code>make clean configure</code>.
 
 <p>
-Note: make sure host-dependent files go in <code>/etc</code> or
-<code>/etc/&lt;name&gt;</code>, but <b>NEVER REPLACE OR MODIFY</b>
-existing files in <code>/etc</code>.
-Best to have install place them in <code>/usr/local/share/&lt;name&gt;</code>
-and then copy to <code>/etc</code> or <code>/etc/&lt;name&gt;</code>
-only if the files do not exist.
-If the files exist, display a message that says such-and-such files need to be
-modified.
-This also guarantees that the files will be included in the package since
-everything under <code>/usr/local</code> is included in the <code>PLIST</code>.
-To handle the copying carefully, the <code>@sample</code> keyword is preferably
-used within the <code>PLIST</code>.
+Configuration files will usually be installed somewhere under
+<code>/usr/local</code> and handled by
+<a href="https://man.openbsd.org/pkg_add">pkg_add(1)</a>
+<code>@sample</code> annotations.
 After a package has been installed the contents of <code>pkg/MESSAGE</code> will
 be displayed if it exists.
 
@@ -515,6 +499,12 @@ Do <b>NOT</b> start with an uppercase letter unless semantically significant,
 and do <b>NOT</b> end with a period.
 <b>DON'T EVER START WITH AN INDEFINITE ARTICLE SUCH AS "a" or "an" - remove
 the article altogether.</b>
+The main usage of <code>COMMENT</code> is the one-liner from
+<a href="https://man.openbsd.org/pkg_info">pkg_info(1)</a>:
+<blockquote><pre>
+py3-cairo-1.24.0    cairo bindings for Python
+</pre></blockquote>
+
 
 <br><br><li>
 Put a longer description of the port into <code>pkg/DESCR</code>.
@@ -526,12 +516,13 @@ and then running it through <code>fmt</code>.
 <br><br><li>
 If the application needs to create a user or a group, choose the lowest free
 id from <code>/usr/ports/infrastructure/db/user.list</code> for your port to
-use and make sure your port gets added to this file at commit time.
+use and don't forget to include that file in your commit.
 
 <br><br><li>
 Install the application with <code>make fake</code>.
 Libraries should never be stripped.
-Executables are stripped by default; this is governed by
+Executables are stripped by default, unless you set
+<code>DEBUG_PACKAGES</code>; this is governed by
 <code>${INSTALL_STRIP}</code>.
 <code>${INSTALL_PROGRAM}</code> honors this automatically and is preferable to
 unconditional stripping (e.g., by an <code>install-strip</code> target or by
@@ -566,7 +557,10 @@ was installed in the proper locations.
 Anything not installed can be added to a port <code>Makefile</code>
 <code>post-install</code> rule.
 Note that <code>PLIST</code> annotations are documented in the
-<a href="https://man.openbsd.org/pkg_create">pkg_create(1)</a> manual.
+<a href="https://man.openbsd.org/pkg_create">pkg_create(1)</a> manual,
+and that
+<a href="https://man.openbsd.org/update-plist">update-plist(1)</a>
+is also documented.
 
 <li>
 It is possible some directories do not need to be in the <code>PLIST</code>
@@ -581,13 +575,13 @@ resulting package with <code>make install</code>, and test its removal with
 When dealing with multi-packages, it may instead be convenient to use
 <a href="https://man.openbsd.org/pkg_add">pkg_add(1)</a> and
 <a href="https://man.openbsd.org/pkg_delete">pkg_delete(1)</a> directly,
-setting <code>PKG_PATH</code> to
-<code>/usr/ports/packages/`arch -s`/all/</code> in the environment.
+setting <code>TRUSTED_PKG_PATH</code> to
+<code>/usr/ports/packages/%a/all/</code> in the environment.
 
 <br><br><li>
 Verify dependencies.
 Peruse your logs to verify the port did detect what is mentioned in
-<code>DEPENDS</code>, and nothing more.
+<code>*DEPENDS</code>, and nothing more.
 Check names, particularly in the <code>make configure</code> stage, for hidden
 dependencies (stuff that exists elsewhere in the ports tree and might be
 detected if the user installs some other ports first).
@@ -614,7 +608,7 @@ Sometimes the <code>make fake</code> stage creates files in the build directory
 which will cause this to fail.
 
 <br><br><li>
-Run the <code>/usr/ports/infrastructure/bin/portcheck</code> utility
+Run the <a href="https://man.openbsd.org/portcheck"><code>/usr/ports/infrastructure/bin/portcheck</code></a> utility
 in your port directory and take care of problems it finds, if any.
 
 <br><br><li>
@@ -638,7 +632,7 @@ course, you'd want it tested on i386.
 </ul>
 
 <br><li>
-Incorporate any feedback you get. Test it again on your platform.
+Incorporate any useful feedback you get. Test it again on your platform.
 Get those who gave you feedback to test it again from your new port.
 
 <br><br><li>
@@ -678,8 +672,8 @@ developers provided OKs.
 Make sure the import path is correct; it always starts with <code>ports/</code>.
 
 <p>
-Alternatively, you can use <code>ports/infrastructure/bin/portimport</code> to
-import new ports (read the manual for usage instructions).
+Alternatively, you can use <a href="https://man.openbsd.org/portimport"><code>ports/infrastructure/bin/portimport</code></a> to
+import new ports.
 
 <li>
 Last but not least, add a one-line entry for the new port in its parent
@@ -698,6 +692,9 @@ In other words - iterate, test, test, iterate...
 <br><br><li>
 When updating a port, remember to handle dependencies!
 You shouldn't break any port that depends on yours.
+The <code>sqlports</code> package includes
+<code>show-reverse-deps</code>, making it trivial to know the full
+tree of ports that depend directly or indirectly on a given port.
 In case of problems, communicate with the maintainers of such ports.
 Likewise, be alert for dependency updates, and check that the maintainer
 did their job.
