--- a/ru-community/articles.html
+++ b/ru-community/articles.html
@@ -56,6 +56,9 @@ OpenBSD. Это ни в коем случае не официальная док
       <li><a href="posts/ru_faq.html">
           Неофициальный FAQ по мотивам телеграм-канала @openbsd_ru</a>
 
+      <li><a href="posts/send_dmesg_by_email.html">
+	  Как отправить dmesg через OpenBSD mail</a>
+
       <li><a href="posts/sysupgrade_65_to_66.html">
           Краткое введение в sysupgrade(8)</a>
 
