fix PATH for p2k23 images

--- a/hackathons.html
+++ b/hackathons.html
@@ -89,6 +89,18 @@ td {
 
 <table>
 <td>
+    <a id="p2k23" href="images/hackathons/p2k23.gif">
+    <img src="images/hackathons/p2k23-s.gif" alt="p2k23"></a><br>
+    p2k23: ports hackathon<br>
+    Сентрябрь 1 - 7, 2023<br>
+    Дублин, Ирландия<br>
+    26 разработчиков<br>
+    Организован благодаря финансированию со стороны
+    <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    <a href="https://www.ncsc.gov.ie/">NCSC Ireland</a>
+    и поддержкеand Tom Smyth.
+    <br>
+<td>
     <a id="g2k23" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
     g2k23: general hackathon<br>
@@ -109,6 +121,7 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Martin Pieuchot.
     <br>
+<tr>
 <td>
     <a id="m2k23" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -118,7 +131,6 @@ td {
     22 разработчика<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <br><br><br>
     <a id="h2k22" href="images/hackathons/h2k22.gif">
@@ -141,6 +153,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="http://www.genua.de">genua</a> и
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="r2k22" href="images/hackathons/r2k22.gif">
     <img src="images/hackathons/r2k22-s.gif" alt="r2k22"></a><br>
